--- a/frontend/scss/ionic.app.scss
+++ b/frontend/scss/ionic.app.scss
@@ -19,5 +19,5 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "../backend/webapp/src/main/webapp/frontend/lib/ionic/scss/ionic";
 
