Refactoring to use chat and chat-detail, changing fake data to be that returned by the HomePageViewModel.

--- a/backend/webapp/src/main/webapp/frontend/templates/chat-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/chat-detail.html
@@ -6,9 +6,9 @@
 -->
 <ion-view view-title="{{chat.chat.name}}">
   <ion-content class="padding">
-    <img ng-src="{{chat.chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.chat.lastText}}
-    </p>
+    <!--<img ng-src="{{chat.chat.face}}" style="width: 64px; height: 64px">-->
+    
+      <h2>{{chat.chat.name}}</h2>
+      <p>{{chat.chat.email}}</p>
   </ion-content>
 </ion-view>
