Now calling REST API via $http, with some hacky simplifications:
- moved back to .js
- and got rid of the services
- using $scope rather than controller as.

will try to reintroduce Typescript, reintroduce services, use "controller as" at a later stage.  Walk, then run.

--- a/backend/webapp/src/main/webapp/frontend/templates/chat-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/chat-detail.html
@@ -4,11 +4,11 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.chat.name}}">
+<ion-view view-title="{{chat.name}}">
   <ion-content class="padding">
     <!--<img ng-src="{{chat.chat.face}}" style="width: 64px; height: 64px">-->
     
-      <h2>{{chat.chat.name}}</h2>
-      <p>{{chat.chat.email}}</p>
+      <h2>{{chat.name}}</h2>
+      <p>{{chat.email}}</p>
   </ion-content>
 </ion-view>
