Fleshing out the chat-detail page.

--- a/backend/webapp/src/main/webapp/frontend/templates/chat-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/chat-detail.html
@@ -5,10 +5,28 @@
   The Friends service returns an array of friend data
 -->
 <ion-view view-title="{{chat.name}}">
-  <ion-content class="padding">
-    <!--<img ng-src="{{chat.chat.face}}" style="width: 64px; height: 64px">-->
     
-      <h2>{{chat.name}}</h2>
-      <p>{{chat.email}}</p>
-  </ion-content>
+    <ion-content class="padding">
+    
+        <h2>{{chat.name}}</h2>
+        <p>{{chat.company}}</p>
+        <p>{{chat.email}}</p>
+
+        <p>Roles:</p>        
+        <ion-list>
+            <ion-item ng-repeat="contactRole in chat.contactRoles">
+                <p>{{contactRole.contactGroup.title}} <span ng-if="{{contactRole.contactGroup.roleName}}">({{contactRole.contactGroup.roleName}})</span></p>
+            </ion-item>
+        </ion-list>
+
+        <p>Phone numbers:</p>        
+        <ion-list>
+            <ion-item ng-repeat="contactNumber in chat.contactNumbers">
+                <p>{{contactNumber.type}}: {{contactNumber.number}}</p>
+            </ion-item>
+        </ion-list>
+
+        <p>{{chat.notes}}</p>
+            
+    </ion-content>
 </ion-view>
