--- a/backend/webapp/src/main/webapp/frontend/templates/tab-chats.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-chats.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Chats">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.$$instanceId}}" >
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in ctrl.chats" type="item-text-wrap" href="#/tab/chats/{{chat.$$instanceId}}" >
         <!--<img ng-src="{{chat.face}}">-->
         <h2>{{chat.name}}</h2>
         <p>{{chat.email}}</p>
