--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -5,9 +5,8 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <ion-tab title="Contact" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab>
-
+    <ion-tab title="Contacts" icon-off="ion-android-contacts-outline" icon-on="ion-android-contacts" href="#/tab/contacts">
+        <ion-nav-view name="tab-contacts"></ion-nav-view>
+    </ion-tab>
 
 </ion-tabs>
