Working on authentication.  Slowly, slowly...

--- a/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
@@ -42,7 +42,7 @@
         </div>
 
 
-        <h4>{{chat.notes}}</h4>
+        <h4>{{ctrl.contact.notes}}</h4>
             
     </ion-content>
 </ion-view>
