logout working but not using button in header, only one in content.

--- a/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
@@ -43,6 +43,7 @@
 
 
         <h4>{{ctrl.contact.notes}}</h4>
-            
+
+        <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
     </ion-content>
 </ion-view>
