--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
@@ -8,5 +8,7 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
+
+    <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
   </ion-content>
 </ion-view>
