--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -2,7 +2,7 @@
     <ion-content class="padding">
         <div class="list list-inset">
             <label class="item item-input">
-                <input type="text" placeholder="Username" ng-model="data.username">
+                <input type="text" placeholder="Username" ng-model="data.username" value="domainapp-admin" >
             </label>
             <label class="item item-input">
                 <input type="password" placeholder="Password" ng-model="data.password">
