--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
@@ -1,3 +1,11 @@
+<ion-nav-bar class="bar-stable">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+  <ion-nav-buttons side="right">
+    <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
+  </ion-nav-buttons>
+</ion-nav-bar>
+
 <ion-view view-title="Contacts">
   <ion-content scroll="true" overflow-scroll="true">
     <ion-list>
@@ -9,6 +17,5 @@
       </ion-item>
     </ion-list>
 
-    <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
   </ion-content>
 </ion-view>
