--- a/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
@@ -2,7 +2,7 @@
     <ion-nav-back-button>
     </ion-nav-back-button>
     <ion-nav-buttons side="right">
-        <button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
+        <button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">Logout</button>
     </ion-nav-buttons>
 </ion-nav-bar>
 
