--- a/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
@@ -1,14 +1,13 @@
-<ion-nav-bar class="bar-stable">
-    <ion-nav-back-button>
-    </ion-nav-back-button>
-    <ion-nav-buttons side="right">
-        <button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">Logout</button>
-    </ion-nav-buttons>
-</ion-nav-bar>
-
-
 <ion-view view-title="{{ctrl.contact.name}}">
-    
+
+    <ion-nav-bar class="bar-stable">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+        <ion-nav-buttons side="right">
+            <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">Logout</nav-button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
+
     <ion-content class="padding">
 
         <div class="row">
