--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Login" name="login-view">
     <ion-content class="padding">
+
+        <div class="card" ng-show="error">
+            <div class="item item-text-wrap assertive">
+                {{error}}
+            </div>
+        </div>
+
         <div class="list list-inset">
             <label class="item item-input">
                 <input type="text" placeholder="Username" ng-model="data.username" >
