adding an icon for the login error message.

--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -2,7 +2,9 @@
     <ion-content class="padding">
 
         <div class="card" ng-show="error">
+
             <div class="item item-text-wrap assertive">
+                <i class="icon ion-android-warning"></i>
                 {{error}}
             </div>
         </div>
