Working a little more reliably now.  Got rid of AUTH_EVENTS, since broadcast wasn't working (dunno enough yet to know why).  But this simpler design is easier to grok.

--- a/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contact-detail.html
@@ -4,7 +4,7 @@
         <ion-nav-back-button>
         </ion-nav-back-button>
         <ion-nav-buttons side="right">
-            <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">Logout</nav-button>
+            <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">&nbsp;{{ctrl.username}}</nav-button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
