--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
@@ -4,13 +4,13 @@
         <ion-nav-back-button>
         </ion-nav-back-button>
         <ion-nav-buttons side="right">
-            <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">Logout</nav-button>
+            <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">&nbsp;{{ctrl.username}}</nav-button>
         </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content scroll="true" overflow-scroll="true">
 
-    <ion-list>
+        <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-left" 
       ng-repeat="contact in ctrl.contacts" type="item-text-wrap" href="#/tab/contacts/{{contact.$$instanceId}}" >
         <h1>{{contact.name}}</h1>
