ionic filter bar dependency added; app still runs (hurray!).  NB: not actually using the filter bar yet ...

--- a/frontend/scss/ionic.app.scss
+++ b/frontend/scss/ionic.app.scss
@@ -20,4 +20,5 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
 @import "../backend/webapp/src/main/webapp/frontend/lib/ionic/scss/ionic";
+@import "../backend/webapp/src/main/webapp/frontend/lib/ionic-filter-bar/scss/ionic.filter.bar";
 
