--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contacts.html
@@ -3,9 +3,16 @@
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button>
         </ion-nav-back-button>
-        <ion-nav-buttons side="right">
+
+        <ion-nav-buttons side="secondary">
             <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">&nbsp;{{ctrl.username}}</nav-button>
         </ion-nav-buttons>
+
+        <ion-nav-buttons side="right">
+            <button class="button button-icon icon ion-ios-search-strong" ng-click="ctrl.showFilterBar()">
+            </button>
+        </ion-nav-buttons>
+
     </ion-nav-bar>
 
     <ion-content scroll="true" overflow-scroll="true">
