--- a/frontend/www/templates/tab-contacts.html
+++ b/frontend/www/templates/tab-contacts.html
@@ -8,7 +8,7 @@
             <nav-button class="button icon-left ion-log-out button-stable" ng-click="ctrl.logout()">&nbsp;{{ctrl.username}}</nav-button>
         </ion-nav-buttons>
 
-        <ion-nav-buttons side="right">
+        <ion-nav-buttons side="left">
             <button class="button button-icon icon ion-ios-search-strong" ng-click="ctrl.showFilterBar()">
             </button>
         </ion-nav-buttons>
