--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -1,7 +1,10 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-    <ion-tab title="Contacts" icon-off="ion-android-contacts-outline" icon-on="ion-android-contacts" href="#/tab/contacts">
+    <ion-tab title="Contacts" icon-off="ion-android-contacts-outline" icon-on="ion-android-contact" href="#/tab/contacts">
         <ion-nav-view name="tab-contacts"></ion-nav-view>
+    </ion-tab>
+    <ion-tab title="Groups" icon-off="ion-android-contacts-outline" icon-on="ion-android-contacts" href="#/tab/groups">
+        <ion-nav-view name="tab-groups"></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
