--- a/frontend/www/templates/tabs.html
+++ b/frontend/www/templates/tabs.html
@@ -1,9 +1,15 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-bottom tabs-stable">
 
-    <ion-tab title="Contacts" icon-off="ion-android-contacts-outline" icon-on="ion-android-contact" href="#/tab/contacts">
+    <ion-tab title="Contacts"
+             icon-off="ion-android-contact"
+             icon-on="ion-android-contact"
+             href="#/tab/contacts">
         <ion-nav-view name="tab-contacts"></ion-nav-view>
     </ion-tab>
-    <ion-tab title="Groups" icon-off="ion-android-contacts-outline" icon-on="ion-android-contacts" href="#/tab/groups">
+    <ion-tab title="Groups"
+             icon-off="ion-android-contacts"
+             icon-on="ion-android-contacts"
+             href="#/tab/groups">
         <ion-nav-view name="tab-groups"></ion-nav-view>
     </ion-tab>
 
