Changed 'Dev' to 'Development'

--- a/frontend/www/templates/login.html
+++ b/frontend/www/templates/login.html
@@ -15,7 +15,7 @@
                     Environment
                 </div>
                 <select ng-model="data.environment">
-                    <option>Dev</option>
+                    <option>Development</option>
                     <option>Test</option>
                     <option>Production</option>
                 </select>
