--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -15,7 +15,7 @@
                     Environment
                 </div>
                 <select ng-model="data.environment">
-                    <option>Dev</option>
+                    <option>Development</option>
                     <option>Test</option>
                     <option>Production</option>
                 </select>
