--- a/frontend/www/templates/group-detail.html
+++ b/frontend/www/templates/group-detail.html
@@ -25,8 +25,12 @@
                 <span class="input-label">Email</span>
                 <input type="text" value="{{ctrl.group.email}}" disabled>
             </label>
+            <label class="item item-input item-stacked-label">
+                <span class="input-label">Address</span>
+                <input type="text" value="{{ctrl.group.address}}" disabled>
+            </label>
         </div>
-       
+
 
         <div class="list">
             <label class="item item-input item-stacked-label"  ng-repeat="contactNumber in ctrl.group.contactNumbers">
