ELI-10: as per http://docs.ionic.io/v1.0/docs/deploy-from-scratch, ran ionic add ionic-platform-web-client

--- a/backend/webapp/src/main/webapp/frontend/templates/group-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/group-detail.html
@@ -25,6 +25,10 @@
                 <span class="input-label">Email</span>
                 <input type="text" value="{{ctrl.group.email}}" disabled>
             </label>
+            <label class="item item-input item-stacked-label">
+                <span class="input-label">Address</span>
+                <input type="text" value="{{ctrl.group.address}}" disabled>
+            </label>
         </div>
 
         <div class="list">
