--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
@@ -17,11 +17,17 @@
 
     <ion-content scroll="true" overflow-scroll="true">
 
-        <ion-list>
+    <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-left" 
-      ng-repeat="contact in ctrl.contacts" type="item-text-wrap" href="#/tab/contacts/{{contact.$$instanceId}}" >
-        <h3>{{contact.name}}</h3>
-        <p>{{contact.company}}</p>
+      ng-repeat="contactable in ctrl.contactables" type="item-text-wrap" href="#/tab/contactables/{{contactable.$$instanceId}}" >
+          <div ng-if="contactable.type == 'Contact'">
+              <h3>{{contactable.name}}</h3>
+              <p>{{contactable.company}}</p>
+          </div>
+          <div ng-if="contactable.type == 'Contact Group'">
+              <h3>{{contactable.name}}</h3>
+              <p>{{contactable.country.title}}</p>
+          </div>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
