--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -4,13 +4,7 @@
              icon-off="ion-android-contact"
              icon-on="ion-android-contact"
              href="#/tab/contacts">
-        <ion-nav-view name="tab-contacts"></ion-nav-view>
-    </ion-tab>
-    <ion-tab title="Groups"
-             icon-off="ion-android-contacts"
-             icon-on="ion-android-contacts"
-             href="#/tab/groups">
-        <ion-nav-view name="tab-groups"></ion-nav-view>
+        <ion-nav-view name="tab-contactables"></ion-nav-view>
     </ion-tab>
 
 </ion-tabs>
