--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -8,7 +8,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content class="padding">
+    <ion-content class="padding" scroll="true" overflow-scroll="true">
 
         <div ng-if="ctrl.contactable.type == 'Contact'">
 
