ELI-8: display a warning if showing cached data.  Also use a namespace prefix for the localStorage keys

--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -10,6 +10,7 @@
 
     <ion-content class="padding" scroll="true" overflow-scroll="true">
 
+        <div ng-show="ctrl.message">{{ctrl.message}}</div>
         <div ng-if="ctrl.contactable.type == 'Contact'">
 
             <div class="row">
@@ -100,4 +101,9 @@
 
 
     </ion-content>
+
+    <div class="bar bar-footer bar-assertive" ng-if="ctrl.message">
+        <h2 class="title">{{ ctrl.message }}</h2>
+    </div>
+
 </ion-view>
