--- a/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tab-contactables.html
@@ -34,4 +34,9 @@
     </ion-list>
 
   </ion-content>
+
+  <div class="bar bar-footer bar-assertive" ng-if="ctrl.message">
+    <h2 class="title">{{ ctrl.message }}</h2>
+  </div>
+
 </ion-view>
