Also update the title of the tab.

--- a/frontend/www/templates/tabs.html
+++ b/frontend/www/templates/tabs.html
@@ -1,7 +1,7 @@
 
 <ion-tabs class="tabs-icon-bottom tabs-stable">
 
-    <ion-tab title="Contacts"
+    <ion-tab title="Home"
              icon-off="ion-android-home"
              icon-on="ion-android-home"
              href="#/tab/contacts">
