show a "loading..." icon for long-running network operations.

--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -1,9 +1,9 @@
 
 <ion-tabs class="tabs-icon-bottom tabs-stable">
 
-    <ion-tab title="Contacts"
-             icon-off="ion-android-contact"
-             icon-on="ion-android-contact"
+    <ion-tab title="Home"
+             icon-off="ion-android-home"
+             icon-on="ion-android-home"
              href="#/tab/contacts">
         <ion-nav-view name="tab-contactables"></ion-nav-view>
     </ion-tab>
