--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col">
                     <h1>{{ctrl.contactable.name}}</h1>
-                    <p>&nbsp;{{ctrl.contactable.country.title}}</p>
+                    <p>&nbsp;{{ctrl.contactable.country}}</p>
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                           ng-repeat="contactRole in ctrl.contactable.contactRoles" type="item-text-wrap" href="#/tab/contactables/{{instanceId(contactRole.contact.href)}}" >
                     <div>
                         <h3>{{contactRole.contact.title}}</h3>
-                        <p><span ng-show="isDefined(contactRole.companyName)">{{contactRole.companyName}}</span>
+                        <p><span ng-show="isDefined(contactRole.company)">{{contactRole.company}}</span>
                         <span ng-show="isDefined(contactRole.roleName)"> ({{contactRole.roleName}})</span></p>
                     </div>
                     <i class="icon ion-android-contact"></i>
